# innersight

./: .dockerignore  .env.example  .gitignore  CONTEXT_FOR_NEW_CONVERSATION.md  Makefile  Phase0_Remaining_Tasks.md  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  api.py  config.py  docker-entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  schema.py  utils.py
backend/b2_data/: pipeline.py
backend/b3_network/: network.py
backend/b4_loss/: loss.py
backend/b5_backprop/: backprop.py
backend/b6_optimizer/: optimizer.py
backend/b7_training/: trainer.py
backend/checkpoints/: alerts.json  best_model.npz  block_log.json  corrections.json
backend/configs/: train_graphsage.yaml  train_metapath2vec.yaml  train_node2vec.yaml
backend/data/: __init__.py  adapters.py  answers.py  feature_store.py  loaders.py  pipeline.py
backend/features/: features.py
backend/feedback/: feedback.py
backend/innersight/: api.py  config.py  schema.py
backend/learning/: 01_device_check.py  02_tensors.py  03_autograd.py  04_nn_module.py  05_loss_and_optimizer.py  06_dataloader.py  07_full_training_loop.py  08_save_load.py  09_pyg_verify.py  10_node2vec.py  11_message_passing.py  README.md  model_checkpoint.pt  preprocessor.pt
backend/models/: dataset.py  embeddings.py  factory.py  gnn_trainer.py  graph_builder.py  graph_loader.py  graph_schema.py  graphsage.py  mlp.py  node2vec_trainer.py
backend/outputs/: phase5_benchmark.txt
backend/scoring/: scoring.py
backend/scripts/: compare_models.py  extract_embeddings.py  train.py  train_embeddings.py  validate_graphs.py  visualize_embeddings.py
backend/tests/: conftest.py  smoke_test_api.py  test_adapters.py  test_answers.py  test_api.py  test_autograd.py  test_backprop.py  test_baseline.py  test_config.py  test_dataset.py  test_deviation_dataset.py  test_evaluation.py  test_feature_store.py  test_fusion_model.py  test_gnn_trainer.py  test_graph_builder_windowed.py  test_graph_encoder.py  test_graphsage.py  test_integration.py  test_integration_baselines.py  test_integration_baselines_phase3.py  test_integration_fusion.py  (+17 more)
(+174 files in other folders)
