[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "innersight"
version = "0.1.0"
description = "InnerSight UEBA - Insider Threat Detection"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "torch>=2.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "scikit-learn>=1.5",
    "flask>=3.0",
    "flask-cors>=5.0",
    "pyyaml",
    "matplotlib",
    "networkx",
    "torch-geometric",
    "xgboost>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[tool.setuptools.packages.find]
# The `innersight` package lives alongside this file at backend/innersight/.
where = ["."]
include = ["innersight*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m \"not slow\""
markers = [
    "slow: end-to-end / integration tests that train a real model (skip with -m \"not slow\")",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
